@@ -1,4 +1,8 @@
 2011-10-04  Jean-Louis Martineau <martineau@zmanda.com>
+	* recover-src/extract_list.c: Do not crahs if amidxtaped close the
+	  connection.
+
+2011-10-04  Jean-Louis Martineau <martineau@zmanda.com>
 	* device-src/s3.c: Correctly set thunk->next_marker.
 
 2011-09-30 Dan Locks <dwlocks@zmanda.com>
